Add SimpleAIChat and tools to plugin
